--- a/rest_api.ipynb
+++ b/rest_api.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " In this lab, we will be using the [CoinGecko API][1] to create one of a candlestick graph for Bitcoin. We will use the API to get the price data for 30 days with 24 observation per day, 1 per hour. We will find the max, min, open, and close price per day meaning we will have 30 candlesticks and use that to generate the candlestick graph. Although we are using the CoinGecko API we will use a Python client/wrapper for the API called [PyCoinGecko][2]. PyCoinGecko will make performing the requests easy and it will deal with the enpoint targeting.\n",
+    " In this lab, we will be using the [CoinGecko API][1] to create a candlestick graph for Bitcoin. We will use the API to get the price data for 30 days with 24 observation per day, 1 per hour. We will find the max, min, open, and close price per day meaning we will have 30 candlesticks and use that to generate the candlestick graph. Although we are using the CoinGecko API we will use a Python client/wrapper for the API called [PyCoinGecko][2]. PyCoinGecko will make performing the requests easy and it will deal with the enpoint targeting.\n",
     " \n",
     " [1]: https://www.coingecko.com/en/api\n",
     " [2]: https://github.com/man-c/pycoingecko"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -40,28 +40,28 @@
       "Requirement already satisfied: requests in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from pycoingecko) (2.27.1)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from requests->pycoingecko) (3.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from requests->pycoingecko) (2022.12.7)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from requests->pycoingecko) (1.26.8)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from requests->pycoingecko) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from requests->pycoingecko) (1.26.8)\n",
       "Requirement already satisfied: plotly in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (5.13.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from plotly) (8.2.1)\n",
       "Requirement already satisfied: mplfinance in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (0.12.9b7)\n",
-      "Requirement already satisfied: pandas in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from mplfinance) (1.4.2)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from mplfinance) (3.5.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (1.21.5)\n",
+      "Requirement already satisfied: pandas in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from mplfinance) (1.4.2)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (21.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (9.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (4.32.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (3.0.8)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (1.4.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (4.32.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (9.1.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (1.21.5)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (3.0.8)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from matplotlib->mplfinance) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->mplfinance) (1.16.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from pandas->mplfinance) (2022.7)\n",
       "Requirement already satisfied: nbformat in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (5.7.3)\n",
-      "Requirement already satisfied: jupyter-core in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (4.9.2)\n",
+      "Requirement already satisfied: traitlets>=5.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (5.1.1)\n",
       "Requirement already satisfied: fastjsonschema in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (2.16.2)\n",
       "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (4.16.0)\n",
-      "Requirement already satisfied: traitlets>=5.1 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (5.1.1)\n",
+      "Requirement already satisfied: jupyter-core in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from nbformat) (4.9.2)\n",
       "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from jsonschema>=2.6->nbformat) (0.18.0)\n",
       "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from jsonschema>=2.6->nbformat) (21.4.0)\n",
       "Requirement already satisfied: pywin32>=1.0 in c:\\users\\linhh\\anaconda3\\envs\\tf-gpu-env\\lib\\site-packages (from jupyter-core->nbformat) (303)\n"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,10 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "from pycoingecko import CoinGeckoAPI\n",
-    "from mplfinance.original_flavor import candlestick2_ohlc"
+    "from mplfinance.original_flavor import candlestick2_ohlc\n",
+    "\n",
+    "%matplotlib nbagg\n",
+    "# %matplotlib inline "
    ]
   },
   {
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +127,7 @@
        "dict"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +159,7 @@
        " [1674370972020, 22939.06268266951]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +273,7 @@
           24582.52478838142,
           24680.35254689371,
           24864.151375677426,
-          25031.326189522566
+          24950.433781125867
          ],
          "high": [
           22939.06268266951,
@@ -303,7 +306,7 @@
           24783.677812278624,
           24718.557572152033,
           24941.421348504064,
-          25031.326189522566
+          24972.047000210994
          ],
          "low": [
           22730.688503647285,
